--- a/trial.html
+++ b/trial.html
@@ -3,6 +3,7 @@
     <head></head>
     <body>
         <button id="button">לחץ פה כדי לפתוח את המחסום</button>
+        <p>ניסיון</p>
     </body>
     <script>
         document.getElementById("button").onclick =  function sendCommand(command) {
